# AoC

./: CMakeLists.txt  functions.cpp  functions.h  main.cpp
Day01/: CMakeCache.txt  functions.cpp  functions.h  main.cpp
Day01/tests/: CMakeLists.txt
Day02/: CMakeLists.txt  functions.h  main.cpp
Day02/tests/: test_main.cpp
Day03/: functions.cpp
